--- a/source/family.html.erb
+++ b/source/family.html.erb
@@ -1,62 +1,38 @@
 ---
-title: "Family" 
+title: "The Family" 
 ---
 
-
+<h2 class="normal mt5">The Dunns</h2>
 	<img src="https://i2.wp.com/www.dunnvineyards.com/wp-content/uploads/2014/06/Dunn-Family2.jpg">
 
-<h2 class="normal mt5">Randy Dunn</h2>
+<h3 class="normal mt5">Randy Dunn</h3>
 <img src="https://i0.wp.com/www.dunnvineyards.com/wp-content/uploads/2014/06/Randy.jpg">
 <p class="lh-copy measure">Founder, farmer, activist and winemaking pioneer of Howell Mountain. Randy started his wine career working for Charlie Wagner as the first enologist for Caymus Vineyards. He went on to make wine for Livingston, La Jota, Pahlmeyer and Palmaz to name a few. He currently makes the Feather wine with the Long Shadows project in Walla Walla, Washington. An avid pilot, mountain biker and nuisance to any hillside developer, he is happy to be called a dirt loving hippie, but you’d probably think he’s more of a cowboy.</p> 
 
 
-<h2 class="normal mt5">Lori Dunn</h2>
+<h3 class="normal mt5">Lori Dunn</h3>
 <img src="https://i2.wp.com/www.dunnvineyards.com/wp-content/uploads/2014/06/Lori.jpg">
 <p class="lh-copy measure">Founder and the “real centerfold” of the enterprise, Lori prepared hearty meals for the family, took care of the house, the horses… oh and the kids. She managed the vineyard accounting as well as the customer orders. She labeled and waxed the bottles, packaged the wine for shipping and really any other thing that needed tending to. Today Lori loves spending time with her grand kids, quilting relaxing at her oasis on Bodega Bay, and making sure that her gardens meet her Master Gardner specifications.</p>
 
-<h2 class="normal mt5">Mike Dunn</h2>
+<h3 class="normal mt5">Mike Dunn</h3>
 <img src="https://i0.wp.com/www.dunnvineyards.com/wp-content/uploads/2014/06/mike2.jpg">
 <p class="lh-copy measure">The self proclaimed “Cellar Grunt”. Mike graduated from UC Santa Barbara in 1988 with a degree in Anthropology (surfing). Mike returned to the winery in 1999 after operating a retail bike shop in Calistoga. Today he oversees production of the wine, works with the team in the vineyards, and generally manages the overall operation. He and his wife Kara started their label Retro Cellars in 2003 with the purchase of some old vine Petite Sirah from Randy. Their two grown children are currently on their own paths, but if their father is an example, they could still end up farming grapes on Howell Mountain.</p>
 
 
-<h2 class="normal mt5">Jennifer Dunn</h2>
+<h3 class="normal mt5">Jennifer Dunn</h3>
 <p class="lh-copy measure">It is safe to say, that we are who we are today because of the love Jenny brought to our lives. She loved riding horses with dad, playing softball along with many other things. She was attending Chico State, when she died of bacterial meningitis in 1999. Today it is a mandate at most institutions of higher learning that students be vaccinated. Jenny was one of the cases that led to this beneficial requirement that has saved many other lives. She loved riding horses with dad, playing softball and <???>. </p>
 
-<h2 class="normal mt5">Kristina Dunn-Buchanan</h2>
+<h3 class="normal mt5">Kristina Dunn-Buchanan</h3>
 <img src="https://i1.wp.com/www.dunnvineyards.com/wp-content/uploads/2014/06/kristina.jpg">
 <p class="lh-copy measure">
 	The youngest in the family, graduated Cal Poly San Luis Obispo with a BS in Wine & Viticulture in 2005. Kristina and Brian Buchanan married in 2010 and now have two young daughters.  Kristina worked at the winery assisting in the winemaking, givng tours and managing the marketing until her children were born. Today she is not involved in the day to day activities of the winery, however she plays a critical role as the mediator in many of challenges associated in family business. 
 </p>
 
 
-<div class="bg-light-silver pa5 mv5">
-
-  <p class="lh-copy measure">&#8220;Beauty is in the eye of the beholder,&#8221; and for Randy the beauty was Howell Mountain. In 1979, Randy and his wife Lori moved with their son Mike into a home on the outskirts of the quiet town of Angwin. While the valley floor inspired farmers to plant vineyards and make wine, Howell Mountain captured Randy&#8217;s heart. From these mountain vineyards the Dunn family made it&#8217;s mark on the wine industry and the land in turn made it&#8217;s mark on the family.</p>
+<h2 class="normal mt5">The Vineyard Family</h2>
 
 
-<h2 class="normal mt5">Randy Dunn</h2>
-
-<p class="lh-copy measure">Founder, owner and winemaker. Graduated from UC Davis in 1975 with a degree in Enology. Made wine in the past for Caymus, Livingston, La Jota, Pahlmeyer, and Palmaz. Currently making wine under the Feather label for the <a title="Long Shadow Wines" href="http://longshadows.com/" target="_blank">Long Shadow</a> Vintner’s group in Walla Walla, Washington. An avid pilot, Randy enjoys traveling by air in his Turbo Commander. If he’s not flying, he is on a mountain bike on the Wildlake property.</p>
-
-
-<h2 class="normal mt5">Lori Dunn</h2>
-<p class="lh-copy measure">Founder, owner, and family backbone. Loralee worked side by side with Randy during the early years, as well as handled the office. Her office duties might have ended with her full time duties as a mother to two young girls and a teenage boy, but Lori continued to work events. By no means did her responsibilities lessen over the years as she cared for the family, home and property.</p>
-
-
-<h2 class="normal mt5">Michael &#8220;Mike&#8221; Dunn</h2>
-
-<p class="lh-copy measure">Son, cellar master and assistant winemaker. Mike attended Davis and graduated from UC Santa Barbara in 1988. Mike has been working full time since 1999 at the winery, each year taking on more and more responsibilities. He has also provided new information, practices and procedures. Mike and his wife, Kara, started their own wine label <a title="Retro Cellars" href="http://www.retrocellars.com" target="_blank">Retro Cellars</a> in 2003. He is enjoying making two different Petite Sirah wines. Mike and Kara have 2 beautiful children, one in an art college and the other in high school. Mike, who’s former career was owning and operating a mountain and road bike shop in Calistoga, is responsible for his family’s love of biking. When Mike isn’t working you might see him on a bike or singing. Music has been a passion of Mike’s for years, and it’s obvious if you engage him in the topic.</p>
-
-<h2 class="normal mt5">Kristina Dunn</h2>
-<p class="lh-copy measure">The youngest in the family, graduated Cal Poly San Luis Obispo with a BS in Wine &amp; Viticulture in 2005, hopes to continue in her father and brother’s footsteps. She has been working at the winery since 2007. Though her title is Director of Marketing, she enjoys helping out wherever she is needed, especially if it is on the crush pad. Kristina and Brian were married in 2010 and have two young daughters.</p>
-
-
-<h2 class="normal mt5">Jenny Dunn</h2>
-<p class="lh-copy measure">Last but not least- Jennifer Jean Dunn: Randy and Lori’s first daughter who passed away at 20 years old in 1999 of Bacterial Meningitis. She attended Chico State, loved riding horses with dad and playing softball. It is safe to say, that we are who we are today because of the love she brought into our lives.</p>
-
-
-<h2 class="normal mt5">Erin Begerow</h2>
-<img src="https://i0.wp.com/www.dunnvineyards.com/wp-content/uploads/2014/06/DSC_0354.jpg?resize=300%2C200" alt="" data-recalc-dims="1"> 
+<h3 class="normal mt5">Erin Begerow</h3>
+<img src="https://i0.wp.com/www.dunnvineyards.com/wp-content/uploads/2014/06/DSC_0354.jpg" alt="" data-recalc-dims="1"> 
 <p class="lh-copy measure">Office manager. She is a native Californian, and a graduate of Pomona College. Erin takes care of all office work, and started working for the Dunn&#8217;s in October of 1994. She and her husband live just down the road from the winery. They have two children, both of whom are in college now. She also coaches the local age group swim team.</p>
 
-</div>
