--- a/source/history.html.erb
+++ b/source/history.html.erb
@@ -6,15 +6,15 @@ title: "History"
 <p class="lh-copy measure">Randy is hired by Caymus as the Enologist</p>
 
 
-
-
-<h3 class="mt4">1978</h3>
+<h3 class="mt4">1978</h3> 
 <p class="lh-copy measure">Randy and Lori purchase the “Trailer Vineyard” and begin farming 5 ½ acres of Cabernet in their free time and on the weekends. Jenny is born and the family moves into the white house.</p>
 
 
 <h3 class="mt4">1979</h3>
 <p class="lh-copy measure">Randy harvests 9 tons of Cabernet Sauvignon from his vineyard and an adjoining vineyard that he manages. He also purchases 3 tons from the Beatty vineyard and produces 660 cases of 750ml’s, 28 cases of magnums and 53 five liter bottles, Dunn Vineyards begins…</p>
 
+<p class="lh-copy measure i">"The mountain really determined the style of the wine. It became obvious right away that the grapes up here were much more powerful than down on the valley floor. I just made the wine itself the same way we did at Caymus, it just was a more tannic wine due to the place."</p>
+<p class="lh-copy measure i">"I knew that I wanted to simplify things after my experience at Caymus. I didn’t want to be bottling into the back of a super market truck and didn’t want to be subjugated to the marketing department’s demands. “Keep it simple dummy.""</p>
 
 <h3 class="mt4">1981</h3>
 <p class="lh-copy measure">The winery is bonded, here in Angwin.</p>
@@ -85,9 +85,15 @@ Randy parts way with Caymus. Construction begins on the brown house. </p>
 <p class="lh-copy measure">Kristina comes to work full time at the winery. Randy and Lori close on the Wildlake Property</p>
 <p class="lh-copy measure">Marcos Olivera joins us full time. He is the back bone of the vineyard crew and if Raul ever retires most certainly will take his place.</p>
 
+<h3 class="mt4">2008</h3>
+<p class="lh-copy measure">Four continous days of 19&deg; lows cut our harvest in half for the year.</p>
+
+
 <h3 class="mt4">2010</h3>
 <p class="lh-copy measure">Kristina marrie Brian Buchanan</p>
 
+<h3 class="mt4">2011</h3>
+<p class="lh-copy measure">Our latest harvest ever: we didn't start picking grapes until October 29th.</p>
 <h3 class="mt4">2013</h3>
 <p class="lh-copy measure">Kristina and Brian welcome their first daughter, Taylor, into the world</p>
 
@@ -100,3 +106,8 @@ Randy parts way with Caymus. Construction begins on the brown house. </p>
 
 <h3 class="mt4">2016</h3>
 <p class="lh-copy measure">Ben Hiza comes up to assist Mike with bottling the 2013’s and is now assisting with the national distribution, tours and whatever else needs doing.</p>
+
+
+<h3 class="mt4">The Future</h3>
+<p class="lh-copy measure">We have no intentions of increasing our production or growing the brand. The current size of our farm and its production allows us to be involved in all aspects. If it were any bigger the work would become much more administrative, managerial not to mention the amount of effort to sell the wine would increase exponentially and for us that’s not the fun part.</p>
+
