--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -25,10 +25,11 @@
         <%= image_tag 'logo.jpg', :class => "", :width => "300" %>
       <% end %>
       <nav class="fr">
-        <%= link_to  'Wines', 'wines.html', :class => 'dark-blue link underline-hover ph3' %>
-        <%= link_to  'Vineyards', 'vineyards.html', :class => 'dark-blue link underline-hover ph3' %>
-        <%= link_to  'About', 'about.html', :class => 'dark-blue link underline-hover ph3' %>
-        <%= link_to  'Contact', 'contact.html', :class => 'dark-blue link underline-hover ph3' %>
+        <%= link_to  'The Wine', 'wines.html', :class => 'dark-blue link underline-hover ph3' %>
+        <%= link_to  'The Place', 'vineyards.html', :class => 'dark-blue link underline-hover ph3' %>
+        <%= link_to  'The Family', 'family.html', :class => 'dark-blue link underline-hover ph3' %>
+        <%= link_to  'The Story', 'history.html', :class => 'dark-blue link underline-hover ph3' %>
+        <!-- <%= link_to  'Contact', 'contact.html', :class => 'dark-blue link underline-hover ph3' %> -->
       </nav>
     </header>
 
@@ -39,13 +40,7 @@
       <%= yield %>
     </section>
 
-    <footer class="bg-light-gray w-100 pa3 mt5">
-      <div class="mw8 center">    
-        <%= partial 'footer-nav' %>
-        <%= partial 'social' %>
-        <p class="f6">&copy; 2017 Dunn Vineyards</p>
-      </div>
+    <%= partial 'footer' %>
 
-    </footer>
   </body>
 </html>
