--- a/source/wines.html.erb
+++ b/source/wines.html.erb
@@ -1,10 +1,16 @@
 ---
-title: "Wines" 
+title: "The Wine" 
 ---
 
 <blockquote class="mb5">
   <p class="lh-copy measure mb0"><i>Nothing is easygoing about Randy Dunn's Cabernets, whether it's the dense red wax atop the bottle you need to soften to access the cork, or the uncompromising style that has become his trademark. &hellip; The quietly fierce nature of Dunn's wines has never been for all comers. But Dunn has always prided himself on being different.</i></p>
   <cite class="f5 ttu tracked tr db measure"> &mdash; Jon Bonné</cite>
+</blockquote>
+
+<blockquote class="mb5">
+<p class="lh-copy measure i mbo">"The mountain really determined the style of the wine. It became obvious right away that the grapes up here were much more powerful than down on the valley floor. I just made the wine itself the same way we did at Caymus, it just was a more tannic wine due to the place."</p>
+
+  <cite class="f5 ttu tracked tr db measure"> &mdash; Randy Dunn</cite>
 </blockquote>
 
 <p class="lh-copy measure">Both of our wines are produced in the same classic way we've done it since 1979.</p>
@@ -78,26 +84,7 @@ title: "Wines"
 <p class="lh-copy measure">The wines are offered to our mailing list every fall. Please click <%= mail_to 'erin@dunnvineyards.com', "here" %> for any mailing list inquiries. (hyperlink to Erin@dunnvineyards.com). The wines also are available in select retail and restaurant locations across the country.</p>
 
 <h2 class="normal mt5">Library Wines</h2>
-<p class="lh-copy measure"></p> We are committed to maintaining a library of all the vintages we have produced. While these wines are not available, we do release older vintages of wine to our mailing list on a regular basis.</p>
+<p class="lh-copy measure">We are committed to maintaining a library of all the vintages we have produced. While these wines are not available, we do release older vintages of wine to our mailing list on a regular basis.</p>
 
 
-
-<hr class="mt6">
-
-<div class="bg-washed-yellow pa4 f5">
-  <h3>Notes & Questions</h3>
-  <p class="lh-copy measure"><b>Highlight each wine:</b> I think it makes sense to highlight the wines separately. If there is a lot of info for each, then maybe they could have separate pages.</p>
-  <p class="lh-copy measure"><b>Bottle shots:</b> If we're going to do them, it makes sense to put them here.</p>
- 
-  </ul>
-</div>
-
-<div class="pa5 bg-light-silver mv5">
-  <p class="i">Other drafts</p>
-  <p class="lh-content measure">Other items for wine details: (for specific release) Harvest Date, Cases, Release Date.</p> 
-<p class="lh-copy measure">Dunn Vineyards produces two wines, Howell Mountain and Napa Valley. Both wines are one hundred percent Cabernet Sauvignon. The wines are made in the same classic manner that we have been making wine since 1979. Our total production varies from vintage to vintage, but we average close to 4500 total cases a year. The Howell Mountain wines consist of one hundred percent Howell Mountain fruit farmed by us. The Napa Valley wines are a blend of our Howell Mountain fruit and a small quantity of fruit that we purchase from two growers in Coombsville. This valley floor fruit contributes to the wine’s earlier approachability and softer tannic structure.</p>
-<p class="i">Current Copy</p>
-<p class="lh-copy measure">Dunn Vineyards wine is sold from the winery through an annual allocation. Though there are several thousand individuals on our mailing list, wine sales are based on a first come first serve basis. One of the benefits to receiving our annual offering through email, is the stories that we share with those who are interested. If you are interested in being put on the wait list to get on the mailing list please contact the winery via the form below.</p>
-
-</div>
 
