added wine photos

--- a/source/wines.html.erb
+++ b/source/wines.html.erb
@@ -86,5 +86,5 @@ title: "The Wine"
 <h2 class="normal mt5">Library Wines</h2>
 <p class="lh-copy measure">We are committed to maintaining a library of all the vintages we have produced. While these wines are not available, we do release older vintages of wine to our mailing list on a regular basis.</p>
 
-
-
+<img src="http://www.dunnvineyards.com/wp-content/uploads/2014/06/wines-slider.jpg">
+<img src="http://www.dunnvineyards.com/wp-content/uploads/2014/06/89-Dunn-Howell-Cab.jpg">
