--- a/source/history.html.erb
+++ b/source/history.html.erb
@@ -5,10 +5,8 @@ title: "History"
 <h3 class="mt4">1975</h3> 
 <p class="lh-copy measure">Randy is hired by Caymus as the Enologist</p>
 
-
 <h3 class="mt4">1978</h3> 
 <p class="lh-copy measure">Randy and Lori purchase the “Trailer Vineyard” and begin farming 5 ½ acres of Cabernet in their free time and on the weekends. Jenny is born and the family moves into the white house.</p>
-
 
 <h3 class="mt4">1979</h3>
 <p class="lh-copy measure">Randy harvests 9 tons of Cabernet Sauvignon from his vineyard and an adjoining vineyard that he manages. He also purchases 3 tons from the Beatty vineyard and produces 660 cases of 750ml’s, 28 cases of magnums and 53 five liter bottles, Dunn Vineyards begins…</p>
@@ -22,7 +20,7 @@ title: "History"
 
 <h3 class="mt4">1982</h3>
 <p class="lh-copy measure">(pic of 5L box) made by hand from a fallen Ponderosa Pine. Randy assists the Lamborn Family with their first wine, consults on Bill Smith’s La Jota project with Helen Turley.</p>
-<p class="bg-light-silver lh-copy measure">The 5L boxes were hand made here at the winery from a fallen Ponderosa Pine. Randy makes the first Lamborn Family wine. Randy consults on Bill Smith’s revived La Jota wine with Helen Turley.</p>
+G<p class="bg-light-silver lh-copy measure">The 5L boxes were hand made here at the winery from a fallen Ponderosa Pine. Randy makes the first Lamborn Family wine. Randy consults on Bill Smith’s revived La Jota wine with Helen Turley.</p>
 
 <h3 class="mt4">1983</h3>
 <p class="lh-copy measure">Randy makes the first Grace Family wine at the Caymus winery.</p> 
@@ -94,6 +92,10 @@ Randy parts way with Caymus. Construction begins on the brown house. </p>
 
 <h3 class="mt4">2011</h3>
 <p class="lh-copy measure">Our latest harvest ever: we didn't start picking grapes until October 29th.</p>
+
+<h3 class="mt4">2011</h3>
+<p class="lh-copy measure">SFGate Publish <a class="link" target="_blank" href="http://www.sfgate.com/wine/thirst/article/Randy-Dunn-s-Cabernet-crusade-3813953.php">"Randy Dunn's Cabernet Crusade"</a>.</p>
+
 <h3 class="mt4">2013</h3>
 <p class="lh-copy measure">Kristina and Brian welcome their first daughter, Taylor, into the world</p>
 
@@ -103,6 +105,7 @@ Randy parts way with Caymus. Construction begins on the brown house. </p>
 <h3 class="mt4">2015</h3>
 <p class="lh-copy measure">Ashlyn, Kristina and Brian’s second daughter is born.</p>
 <p class="lh-copy measure">Fernando Olivera Hernandez is hired full time with us</p>
+<p class="lh-copy measure">Jay McInerney pays a visit to the winery and <a class="link" target="_blank" href="http://www.townandcountrymag.com/leisure/drinks/a4256/jay-mcinerney-june-july-2014/"> writes it up</a>.</p>
 
 <h3 class="mt4">2016</h3>
 <p class="lh-copy measure">Ben Hiza comes up to assist Mike with bottling the 2013’s and is now assisting with the national distribution, tours and whatever else needs doing.</p>
