hdr and ftr cleanup

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,6 +1,6 @@
 
 <%= image_tag 'vineyard.jpg', :class => 'w6' %>
 
-<p class="measure lh-copy">Since 1979, Randy and Lori Dunn and family have owned and operated Dunn Vineyards and continue to produce one of the most highly acclaimed Cabernet Sauvignons from Howell Mountain and the Napa Valley.</p>
+<p class="measure lh-copy tc mv5 center i f3">Since 1979, Randy and Lori Dunn and family have owned and operated Dunn Vineyards and continue to produce one of the most highly acclaimed Cabernet Sauvignons from Howell Mountain and the Napa Valley.</p>
 
 <%= image_tag 'bottles.jpg', :class => 'w6' %>
