--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -22,14 +22,14 @@
   <body class="<%= page_classes %> pa5 athelas black-70 f4">
     <header class="mw8 center">
       <% link_to '/', :class => "link dib"  do %>
-        <%= image_tag 'logo.jpg', :class => "", :width => "300" %>
+        <%= image_tag 'logo.jpg', :class => "pl1", :height => "72" %>
       <% end %>
-      <nav class="fr">
-        <%= link_to  'The Wine', 'wines.html', :class => 'dark-blue link underline-hover ph3' %>
-        <%= link_to  'The Place', 'vineyards.html', :class => 'dark-blue link underline-hover ph3' %>
-        <%= link_to  'The Family', 'family.html', :class => 'dark-blue link underline-hover ph3' %>
-        <%= link_to  'The Story', 'history.html', :class => 'dark-blue link underline-hover ph3' %>
-        <!-- <%= link_to  'Contact', 'contact.html', :class => 'dark-blue link underline-hover ph3' %> -->
+      <nav class="fr" style="line-height: 72px;">
+        <%= link_to  'The Wine', 'wines.html', :class => 'dark-blue link dim ph3' %>
+        <%= link_to  'The Place', 'vineyards.html', :class => 'dark-blue link dim ph3' %>
+        <%= link_to  'The Family', 'family.html', :class => 'dark-blue link dim ph3' %>
+        <%= link_to  'The Story', 'history.html', :class => 'dark-blue link dim ph3' %>
+        <!-- <%= link_to  'Contact', 'contact.html', :class => 'dark-blue link dim ph3' %> -->
       </nav>
     </header>
 
