updates to wine page

--- a/source/wines.html.erb
+++ b/source/wines.html.erb
@@ -2,22 +2,29 @@
 title: "The Wine" 
 ---
 
-<blockquote class="mb5">
-  <p class="lh-copy measure mb0"><i>Nothing is easygoing about Randy Dunn's Cabernets, whether it's the dense red wax atop the bottle you need to soften to access the cork, or the uncompromising style that has become his trademark. &hellip; The quietly fierce nature of Dunn's wines has never been for all comers. But Dunn has always prided himself on being different.</i></p>
-  <cite class="f5 ttu tracked tr db measure"> &mdash; Jon Bonné</cite>
+<%= image_tag 'bottles.jpg', :class => 'w6' %>
+
+<blockquote class="mv5 measure center">
+  <p class="lh-copy mb0"><i>Nothing is easygoing about Randy Dunn's Cabernets, whether it's the dense red wax atop the bottle you need to soften to access the cork, or the uncompromising style that has become his trademark. &hellip; The quietly fierce nature of Dunn's wines has never been for all comers. But Dunn has always prided himself on being different.</i></p>
+  <cite class="f5 ttu tracked tr db fr"> &mdash; Jon Bonné</cite>
 </blockquote>
 
-<blockquote class="mb5">
-<p class="lh-copy measure i mbo">"The mountain really determined the style of the wine. It became obvious right away that the grapes up here were much more powerful than down on the valley floor. I just made the wine itself the same way we did at Caymus, it just was a more tannic wine due to the place."</p>
 
-  <cite class="f5 ttu tracked tr db measure"> &mdash; Randy Dunn</cite>
+<%= image_tag 'wine/vineyard.jpg', :class => 'w6' %>
+
+<blockquote class="mv5 measure center">
+<p class="lh-copy i mb0">"The mountain really determined the style of the wine. It became obvious right away that the grapes up here were much more powerful than down on the valley floor. I just made the wine itself the same way we did at Caymus, it just was a more tannic wine due to the place."</p>
+
+  <cite class="f5 ttu tracked tr db fr"> &mdash; Randy Dunn</cite>
 </blockquote>
 
 <p class="lh-copy measure">Both of our wines are produced in the same classic way we've done it since 1979.</p>
 
 
+<%= image_tag 'wine/lone-bottle.jpg', :class => 'w-50' %>
+
 <h2 class="normal mt5">Howell Mountain Cabernet</h2>
-<p class="lh-copy measure">The Howell Mountain wines consist of one hundred percent Howell Mountain fruit farmed by us. One of the signatures of the Howell Mountain wine is that it is hand dipped in red wax.</p>
+<p class="lh-copy measure" >The Howell Mountain wines consist of one hundred percent Howell Mountain fruit farmed by us. One of the signatures of the Howell Mountain wine is that it is hand dipped in red wax.</p>
 
 <table class="collapse">
   <tr class="striped--near-white">
@@ -48,6 +55,7 @@ title: "The Wine"
 <p><%= link_to  'Tasting notes &raquo;', 'tasting-notes.html', :class => 'dark-blue link underline-hover' %></p>
 
 
+<%= image_tag 'wine/label.jpg', :class => 'w-50' %>
 
 <h2 class="normal mt5">Napa Valley Cabernet</h2>
 <p class="lh-copy measure">The Napa Valley wines are a blend of our Howell Mountain fruit and a small quantity of fruit that we purchase from two growers in Coombsville. This valley floor fruit contributes to the wine’s earlier approachability and softer tannic structure.</p>
