--- a/source/_footer.erb
+++ b/source/_footer.erb
@@ -6,9 +6,9 @@
     <%= link_to  'The Wine', 'wines.html', :class => 'dib dark-blue link dim pr3' %>
     <%= link_to  'The Place', 'vineyards.html', :class => 'di dark-blue link dim pr3' %>
     <%= link_to  'The Family', 'family.html', :class => 'di dark-blue link dim pr3' %>
-    <%= link_to  'The Story', 'history.html', :class => 'di dark-blue link dim pr3' %>
-    <div class="mt4">
-    <%= link_to  'Contact Us', 'contact.html', :class => 'di dark-blue link dim pr3' %>
+    <%= link_to  'The Story', 'history.html', :class => 'di dark-blue link dim' %>
+    <div class="mt4"
+    <%= link_to  'Contact Us', 'contact.html', :class => 'di dark-blue link dim' %>
     </div>
     <div class="mt4">
     <%= partial 'social' %>
