--- a/source/wines.html.erb
+++ b/source/wines.html.erb
@@ -18,81 +18,106 @@ title: "The Wine"
   <cite class="f5 ttu tracked tr db fr"> &mdash; Randy Dunn</cite>
 </blockquote>
 
-<p class="lh-copy measure">Both of our wines are produced in the same classic way we've done it since 1979.</p>
-
-
-<%= image_tag 'wine/lone-bottle.jpg', :class => 'w-50' %>
-
-<h2 class="normal mt5">Howell Mountain Cabernet</h2>
-<p class="lh-copy measure" >The Howell Mountain wines consist of one hundred percent Howell Mountain fruit farmed by us. One of the signatures of the Howell Mountain wine is that it is hand dipped in red wax.</p>
-
-<table class="collapse">
-  <tr class="striped--near-white">
-    <td class="pa2 ba b--black-10">Appelation</td><td class="pa2 ba b--black-10">Napa Valley</td>
-  </tr>
-  <tr class="striped--near-white">
-    <td class="pa2 ba b--black-10">Source</td><td class="pa2 ba b--black-10">Howell Mountain AVA</td>
-  </tr>
-  <tr class="striped--near-white">
-    <td class="pa2 ba b--black-10">Vineyard</td><td class="pa2 ba b--black-10">?</td>
-  </tr>
-  <tr class="striped--near-white">
-    <td class="pa2 ba b--black-10">Varietal</td><td class="pa2 ba b--black-10">100% Cabernet Sauvignon</td>
-  </tr>
-  <tr class="striped--near-white">
-    <td class="pa2 ba b--black-10">Elevage</td><td class="pa2 ba b--black-10">32 months in 100% new French oak</td>
-  </tr>
-  <tr class="striped--near-white">
-    <td class="pa2 ba b--black-10">Estimated Maturity</td><td class="pa2 ba b--black-10">5&ndash;20 Years</td>
-  </tr>
-  <tr class="striped--near-white">
-    <td class="pa2 ba b--black-10">Estimated Alcohol Content</td><td class="pa2 ba b--black-10">14%</td>
-  </tr>
-</table>
-
-
-<p><%= link_to  'How to remove the red wax &raquo;', 'how-to-remove-red-wax.html', :class => 'dark-blue link underline-hover' %></p>
-<p><%= link_to  'Tasting notes &raquo;', 'tasting-notes.html', :class => 'dark-blue link underline-hover' %></p>
-
-
-<%= image_tag 'wine/label.jpg', :class => 'w-50' %>
-
-<h2 class="normal mt5">Napa Valley Cabernet</h2>
-<p class="lh-copy measure">The Napa Valley wines are a blend of our Howell Mountain fruit and a small quantity of fruit that we purchase from two growers in Coombsville. This valley floor fruit contributes to the wine’s earlier approachability and softer tannic structure.</p>
-
-
-<table class="collapse">
-  <tr class="striped--near-white">
-    <td class="pa2 ba b--black-10">Appelation</td><td class="pa2 ba b--black-10">Napa Valley</td>
-  </tr>
-  <tr class="striped--near-white">
-    <td class="pa2 ba b--black-10">Source</td><td class="pa2 ba b--black-10">Howell Mountain AVA and Coombsville AVA</td>
-  </tr>
-  <tr class="striped--near-white">
-    <td class="pa2 ba b--black-10">Vineyard</td><td class="pa2 ba b--black-10">?</td>
-  </tr>
-  <tr class="striped--near-white">
-    <td class="pa2 ba b--black-10">Varietal</td><td class="pa2 ba b--black-10">100% Cabernet Sauvignon</td>
-  </tr>
-  <tr class="striped--near-white">
-    <td class="pa2 ba b--black-10">Elevage</td><td class="pa2 ba b--black-10">32 months in 100% new French oak</td>
-  </tr>
-  <tr class="striped--near-white">
-    <td class="pa2 ba b--black-10">Estimated Maturity</td><td class="pa2 ba b--black-10">5&ndash;20 Years</td>
-  </tr>
-  <tr class="striped--near-white">
-    <td class="pa2 ba b--black-10">Estimated Alcohol Content</td><td class="pa2 ba b--black-10">14%</td>
-  </tr>
-</table>
+<p class="lh-copy measure center">Both of our wines are produced in the same classic way we've done it since 1979.</p>
 
 
 
+<section class="center mb3" style="max-width: 1180px;">
+	<div class="w-100 center cf">
+		<div class="fl w-100 w-50-l ph4">
 
-<h2 class="normal mt5">Availability</h2>
-<p class="lh-copy measure">The wines are offered to our mailing list every fall. Please click <%= mail_to 'erin@dunnvineyards.com', "here" %> for any mailing list inquiries. (hyperlink to Erin@dunnvineyards.com). The wines also are available in select retail and restaurant locations across the country.</p>
+			<h2 class="normal mt5">Howell Mountain Cabernet</h2>
+			<p class="lh-copy measure" >The Howell Mountain wines consist of one hundred percent Howell Mountain fruit farmed by us. One of the signatures of the Howell Mountain wine is that it is hand dipped in red wax.</p>
 
-<h2 class="normal mt5">Library Wines</h2>
-<p class="lh-copy measure">We are committed to maintaining a library of all the vintages we have produced. While these wines are not available, we do release older vintages of wine to our mailing list on a regular basis.</p>
+			<table class="collapse">
+				<tr class="striped--near-white">
+					<td class="pa2 ba b--black-10">Appelation</td><td class="pa2 ba b--black-10">Napa Valley</td>
+				</tr>
+				<tr class="striped--near-white">
+					<td class="pa2 ba b--black-10">Source</td><td class="pa2 ba b--black-10">Howell Mountain AVA</td>
+				</tr>
+				<tr class="striped--near-white">
+					<td class="pa2 ba b--black-10">Vineyard</td><td class="pa2 ba b--black-10">?</td>
+				</tr>
+				<tr class="striped--near-white">
+					<td class="pa2 ba b--black-10">Varietal</td><td class="pa2 ba b--black-10">100% Cabernet Sauvignon</td>
+				</tr>
+				<tr class="striped--near-white">
+					<td class="pa2 ba b--black-10">Elevage</td><td class="pa2 ba b--black-10">32 months in 100% new French oak</td>
+				</tr>
+				<tr class="striped--near-white">
+					<td class="pa2 ba b--black-10">Estimated Maturity</td><td class="pa2 ba b--black-10">5&ndash;20 Years</td>
+				</tr>
+				<tr class="striped--near-white">
+					<td class="pa2 ba b--black-10">Estimated Alcohol Content</td><td class="pa2 ba b--black-10">14%</td>
+				</tr>
+			</table>
 
-<img src="http://www.dunnvineyards.com/wp-content/uploads/2014/06/wines-slider.jpg">
-<img src="http://www.dunnvineyards.com/wp-content/uploads/2014/06/89-Dunn-Howell-Cab.jpg">
+
+			<p><%= link_to  'How to remove the red wax &raquo;', 'how-to-remove-red-wax.html', :class => 'dark-blue link underline-hover' %></p>
+			<p><%= link_to  'Tasting notes &raquo;', 'tasting-notes.html', :class => 'dark-blue link underline-hover' %></p>
+		</div>
+
+
+		<div class="fl w-100 w-50-l ph4">
+			<%= image_tag 'wine/lone-bottle.jpg', :class => 'w-100' %>
+		</div>
+	</div>
+</section>
+
+<section class="center mb3" style="max-width: 1180px;">
+	<div class="w-100 center cf">
+		<div class="fl w-100 w-50-l ph4">
+			<h2 class="normal mt5">Napa Valley Cabernet</h2>
+			<p class="lh-copy measure">The Napa Valley wines are a blend of our Howell Mountain fruit and a small quantity of fruit that we purchase from two growers in Coombsville. This valley floor fruit contributes to the wine’s earlier approachability and softer tannic structure.</p>
+
+
+			<table class="collapse">
+				<tr class="striped--near-white">
+					<td class="pa2 ba b--black-10">Appelation</td><td class="pa2 ba b--black-10">Napa Valley</td>
+				</tr>
+				<tr class="striped--near-white">
+					<td class="pa2 ba b--black-10">Source</td><td class="pa2 ba b--black-10">Howell Mountain AVA and Coombsville AVA</td>
+				</tr>
+				<tr class="striped--near-white">
+					<td class="pa2 ba b--black-10">Vineyard</td><td class="pa2 ba b--black-10">?</td>
+				</tr>
+				<tr class="striped--near-white">
+					<td class="pa2 ba b--black-10">Varietal</td><td class="pa2 ba b--black-10">100% Cabernet Sauvignon</td>
+				</tr>
+				<tr class="striped--near-white">
+					<td class="pa2 ba b--black-10">Elevage</td><td class="pa2 ba b--black-10">32 months in 100% new French oak</td>
+				</tr>
+				<tr class="striped--near-white">
+					<td class="pa2 ba b--black-10">Estimated Maturity</td><td class="pa2 ba b--black-10">5&ndash;20 Years</td>
+				</tr>
+				<tr class="striped--near-white">
+					<td class="pa2 ba b--black-10">Estimated Alcohol Content</td><td class="pa2 ba b--black-10">14%</td>
+				</tr>
+			</table>
+		</div>
+
+
+		<div class="fl w-100 w-50-l ph4">
+			<%= image_tag 'wine/label.jpg', :class => 'w-100' %>
+		</div>
+	</div>
+</section>
+
+<section>
+	<img src="http://www.dunnvineyards.com/wp-content/uploads/2014/06/wines-slider.jpg" class="w-100">
+	<div class="w-100 center cf">
+		<div class="fl w-100 w-50-l ph4">
+			<h2 class="normal mt5">Availability</h2>
+			<p class="lh-copy measure">The wines are offered to our mailing list every fall. Please click <%= mail_to 'erin@dunnvineyards.com', "here" %> for any mailing list inquiries. (hyperlink to Erin@dunnvineyards.com). The wines also are available in select retail and restaurant locations across the country.</p>
+
+		</div>
+		<div class="fl w-100 w-50-l ph4">
+			<h2 class="normal mt5">Library Wines</h2>
+			<p class="lh-copy measure">We are committed to maintaining a library of all the vintages we have produced. While these wines are not available, we do release older vintages of wine to our mailing list on a regular basis.</p>
+
+		</div>
+	</div>
+	<img src="http://www.dunnvineyards.com/wp-content/uploads/2014/06/89-Dunn-Howell-Cab.jpg" class="w-100">
+</section>
+
