--- a/source/wines.html.erb
+++ b/source/wines.html.erb
@@ -22,14 +22,18 @@ title: "The Wine"
 
 
 
-<section class="center mb3" style="max-width: 1180px;">
+<section class="center mb4 cf" style="max-width: 1180px;">
 	<div class="w-100 center cf">
-		<div class="fl w-100 w-50-l ph4">
+		<div class="fl w-100 w-50-l ph4 mb4-l">
 
 			<h2 class="normal mt5">Howell Mountain Cabernet</h2>
-			<p class="lh-copy measure" >The Howell Mountain wines consist of one hundred percent Howell Mountain fruit farmed by us. One of the signatures of the Howell Mountain wine is that it is hand dipped in red wax.</p>
+      <p class="i mt0">Napa Valley: Howell Mountain AVA</p>
+      
+      <p class="lh-copy measure" >The Howell Mountain wines consist of one hundred percent Howell Mountain fruit farmed by us. One of the signatures of the Howell Mountain wine is that it is hand dipped in red wax.</p>
 
-			<table class="collapse">
+      <p class="lh-copy measure">Our Howell Mountain wine is 100% Cabernet Sauvignon aged 32 months in 100% new French oak.</p>
+
+<!-- 			<table class="collapse">
 				<tr class="striped--near-white">
 					<td class="pa2 ba b--black-10">Appelation</td><td class="pa2 ba b--black-10">Napa Valley</td>
 				</tr>
@@ -52,7 +56,7 @@ title: "The Wine"
 					<td class="pa2 ba b--black-10">Estimated Alcohol Content</td><td class="pa2 ba b--black-10">14%</td>
 				</tr>
 			</table>
-
+-->
 
 			<p><%= link_to  'How to remove the red wax &raquo;', 'how-to-remove-red-wax.html', :class => 'dark-blue link underline-hover' %></p>
 			<p><%= link_to  'Tasting notes &raquo;', 'tasting-notes.html', :class => 'dark-blue link underline-hover' %></p>
@@ -65,7 +69,6 @@ title: "The Wine"
 	</div>
 </section>
 
-<section class="center mb3" style="max-width: 1180px;">
 	<div class="w-100 center cf">
 		<div class="fl w-100 w-50-l ph4">
 			<h2 class="normal mt5">Napa Valley Cabernet</h2>
