--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,6 +1,13 @@
+<section class="w-100">
+<%= image_tag 'home/home.jpg', :class => '' %>
+</section>
 
-<%= image_tag 'vineyard.jpg', :class => 'w6' %>
+<section class="">
 
+<section class="mw8 center mv6">
 <p class="measure lh-copy tc mv5 center i f3">Since 1979, Randy and Lori Dunn and family have owned and operated Dunn Vineyards and continue to produce one of the most highly acclaimed Cabernet Sauvignons from Howell Mountain and the Napa Valley.</p>
+</section>
 
-<%= image_tag 'bottles.jpg', :class => 'w6' %>
+<section class="w-100">
+<%= image_tag 'wine/vertical.jpg', :class => '' %>
+</section>
