wine page looking ok

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -34,8 +34,7 @@
       </nav>
     </header>
 
-
-    <section class="w8 center">    
+    <section class="mw8 center mv4">    
       <% if current_page.data.title.present? %>
         <h1 class="normal"><%= current_page.data.title %></h1>
       <% end %>
