--- a/source/wines.html.erb
+++ b/source/wines.html.erb
@@ -2,125 +2,62 @@
 title: "The Wine" 
 ---
 
-<%= image_tag 'bottles.jpg', :class => 'w6' %>
-
-<blockquote class="mv5 measure center">
+	<img src="http://www.dunnvineyards.com/wp-content/uploads/2014/06/wines-slider.jpg" class="w-100">
+  <section class="pv5">
+<blockquote class="mb5 measure center">
   <p class="lh-copy mb0"><i>Nothing is easygoing about Randy Dunn's Cabernets, whether it's the dense red wax atop the bottle you need to soften to access the cork, or the uncompromising style that has become his trademark. &hellip; The quietly fierce nature of Dunn's wines has never been for all comers. But Dunn has always prided himself on being different.</i></p>
   <cite class="f5 ttu tracked tr db fr"> &mdash; Jon Bonné</cite>
 </blockquote>
 
 
-<%= image_tag 'wine/vineyard.jpg', :class => 'w6' %>
 
-<blockquote class="mv5 measure center">
+<blockquote class="mb4 measure center">
 <p class="lh-copy i mb0">"The mountain really determined the style of the wine. It became obvious right away that the grapes up here were much more powerful than down on the valley floor. I just made the wine itself the same way we did at Caymus, it just was a more tannic wine due to the place."</p>
-
   <cite class="f5 ttu tracked tr db fr"> &mdash; Randy Dunn</cite>
 </blockquote>
 
-<p class="lh-copy measure center">Both of our wines are produced in the same classic way we've done it since 1979.</p>
+<!-- <p class="lh-copy measure center">Both of our wines are produced in the same classic way we've done it since 1979.</p> -->
+</section>
+
+<section class="w-100 mt2">
+<%= image_tag 'wine/vineyard.jpg', :class => 'w-100' %>
+</section>
 
 
-
-<section class="center mb4 cf" style="max-width: 1180px;">
+<section class="center pv5 cf" style="max-width: 1180px;">
 	<div class="w-100 center cf">
 		<div class="fl w-100 w-50-l ph4 mb4-l">
-
-			<h2 class="normal mt5">Howell Mountain Cabernet</h2>
-      <p class="i mt0">Napa Valley: Howell Mountain AVA</p>
-      
+			<h2 class="normal mt4">Howell Mountain Cabernet</h2>
+      <!--  <p class="i mt0">Napa Valley: Howell Mountain AVA</p> -->
       <p class="lh-copy measure" >The Howell Mountain wines consist of one hundred percent Howell Mountain fruit farmed by us. One of the signatures of the Howell Mountain wine is that it is hand dipped in red wax.</p>
-
-      <p class="lh-copy measure">Our Howell Mountain wine is 100% Cabernet Sauvignon aged 32 months in 100% new French oak.</p>
-
-<!-- 			<table class="collapse">
-				<tr class="striped--near-white">
-					<td class="pa2 ba b--black-10">Appelation</td><td class="pa2 ba b--black-10">Napa Valley</td>
-				</tr>
-				<tr class="striped--near-white">
-					<td class="pa2 ba b--black-10">Source</td><td class="pa2 ba b--black-10">Howell Mountain AVA</td>
-				</tr>
-				<tr class="striped--near-white">
-					<td class="pa2 ba b--black-10">Vineyard</td><td class="pa2 ba b--black-10">?</td>
-				</tr>
-				<tr class="striped--near-white">
-					<td class="pa2 ba b--black-10">Varietal</td><td class="pa2 ba b--black-10">100% Cabernet Sauvignon</td>
-				</tr>
-				<tr class="striped--near-white">
-					<td class="pa2 ba b--black-10">Elevage</td><td class="pa2 ba b--black-10">32 months in 100% new French oak</td>
-				</tr>
-				<tr class="striped--near-white">
-					<td class="pa2 ba b--black-10">Estimated Maturity</td><td class="pa2 ba b--black-10">5&ndash;20 Years</td>
-				</tr>
-				<tr class="striped--near-white">
-					<td class="pa2 ba b--black-10">Estimated Alcohol Content</td><td class="pa2 ba b--black-10">14%</td>
-				</tr>
-			</table>
--->
-
+			<p><%= link_to  'Tasting notes &raquo;', 'tasting-notes.html', :class => 'dark-blue link underline-hover' %></p>
 			<p><%= link_to  'How to remove the red wax &raquo;', 'how-to-remove-red-wax.html', :class => 'dark-blue link underline-hover' %></p>
+		</div>
+
+		<div class="fl w-100 w-50-l ph4">
+			<h2 class="normal mt4">Napa Valley Cabernet</h2>
+			<p class="lh-copy measure">The Napa Valley wines are a blend of our Howell Mountain fruit and a small quantity of fruit that we purchase from two growers in Coombsville. This valley floor fruit contributes to the wine’s earlier approachability and softer tannic structure.</p>
 			<p><%= link_to  'Tasting notes &raquo;', 'tasting-notes.html', :class => 'dark-blue link underline-hover' %></p>
 		</div>
-
-
-		<div class="fl w-100 w-50-l ph4">
-			<%= image_tag 'wine/lone-bottle.jpg', :class => 'w-100' %>
-		</div>
-	</div>
+    </div>
+      <p class="lh-copy measure center tc">Both of our wines are 100% Cabernet Sauvignon aged 32 months in 100% new French oak.</p>
 </section>
 
+	<img src="http://www.dunnvineyards.com/wp-content/uploads/2014/06/89-Dunn-Howell-Cab.jpg" class="w-100">
+
+<section class="mv5">
 	<div class="w-100 center cf">
 		<div class="fl w-100 w-50-l ph4">
-			<h2 class="normal mt5">Napa Valley Cabernet</h2>
-			<p class="lh-copy measure">The Napa Valley wines are a blend of our Howell Mountain fruit and a small quantity of fruit that we purchase from two growers in Coombsville. This valley floor fruit contributes to the wine’s earlier approachability and softer tannic structure.</p>
-
-
-			<table class="collapse">
-				<tr class="striped--near-white">
-					<td class="pa2 ba b--black-10">Appelation</td><td class="pa2 ba b--black-10">Napa Valley</td>
-				</tr>
-				<tr class="striped--near-white">
-					<td class="pa2 ba b--black-10">Source</td><td class="pa2 ba b--black-10">Howell Mountain AVA and Coombsville AVA</td>
-				</tr>
-				<tr class="striped--near-white">
-					<td class="pa2 ba b--black-10">Vineyard</td><td class="pa2 ba b--black-10">?</td>
-				</tr>
-				<tr class="striped--near-white">
-					<td class="pa2 ba b--black-10">Varietal</td><td class="pa2 ba b--black-10">100% Cabernet Sauvignon</td>
-				</tr>
-				<tr class="striped--near-white">
-					<td class="pa2 ba b--black-10">Elevage</td><td class="pa2 ba b--black-10">32 months in 100% new French oak</td>
-				</tr>
-				<tr class="striped--near-white">
-					<td class="pa2 ba b--black-10">Estimated Maturity</td><td class="pa2 ba b--black-10">5&ndash;20 Years</td>
-				</tr>
-				<tr class="striped--near-white">
-					<td class="pa2 ba b--black-10">Estimated Alcohol Content</td><td class="pa2 ba b--black-10">14%</td>
-				</tr>
-			</table>
-		</div>
-
-
-		<div class="fl w-100 w-50-l ph4">
-			<%= image_tag 'wine/label.jpg', :class => 'w-100' %>
-		</div>
-	</div>
-</section>
-
-<section>
-	<img src="http://www.dunnvineyards.com/wp-content/uploads/2014/06/wines-slider.jpg" class="w-100">
-	<div class="w-100 center cf">
-		<div class="fl w-100 w-50-l ph4">
-			<h2 class="normal mt5">Availability</h2>
+			<h2 class="normal mt4">Availability</h2>
 			<p class="lh-copy measure">The wines are offered to our mailing list every fall. Please click <%= mail_to 'erin@dunnvineyards.com', "here" %> for any mailing list inquiries. (hyperlink to Erin@dunnvineyards.com). The wines also are available in select retail and restaurant locations across the country.</p>
 
 		</div>
 		<div class="fl w-100 w-50-l ph4">
-			<h2 class="normal mt5">Library Wines</h2>
+			<h2 class="normal mt4">Library Wines</h2>
 			<p class="lh-copy measure">We are committed to maintaining a library of all the vintages we have produced. While these wines are not available, we do release older vintages of wine to our mailing list on a regular basis.</p>
 
 		</div>
 	</div>
-	<img src="http://www.dunnvineyards.com/wp-content/uploads/2014/06/89-Dunn-Howell-Cab.jpg" class="w-100">
 </section>
+<%= image_tag 'wine/vertical.jpg', :class => 'w-100' %>
 
