--- a/source/vineyards.html.erb
+++ b/source/vineyards.html.erb
@@ -2,17 +2,26 @@
 title: "The Place" 
 ---
 
+<%= image_tag 'place/coyote.jpg', :class => 'w-100' %>
 
-<blockquote class="mb5">
-<p class="lh-copy measure mb0 i">We farm 35 acres of Cabernet Sauvignon on Howell Mountain. Since 1979 we’ve done our best to care for these vines so that they produce a wine that tastes like Cabernet Sauvignon from Howell Mountain. Today we are hands on in the vineyard, on the crush pad and in the cellar. Any more land and we would need to spend more time administering and managing we’d prefer to farm.</p>
+<section class="mv5 mw8 center">
+<blockquote class="mb4 measure center">
+<p class="lh-copy i mb0">We farm 35 acres of Cabernet Sauvignon on Howell Mountain. Since 1979 we’ve done our best to care for these vines so that they produce a wine that tastes like Cabernet Sauvignon from Howell Mountain. Today we are hands on in the vineyard, on the crush pad and in the cellar. Any more land and we would need to spend more time administering and managing we’d prefer to farm.</p>
   <cite class="f5 ttu tracked tr db measure"> &mdash; Randy Dunn</cite>
 </blockquote>
+</section>
 
+
+<section class="mv5 mw8 center">
 <h2 class="normal mt5 mb0">The Mountain</h2>
 <p class="lh-copy measure">Something about how Randy was instrumental is helping create the first sub AVA in Napa and using his plane to survey the area.</p>
+</section>
 
+<%= image_tag 'place/coyote.jpg', :class => 'w-100' %>
 
-<h2 class="normal mt5 mb0">The Vineyards</h2>
+<section class="mv5 mw8 center">
+  
+  <h2 class="normal mt5 mb0 tc">The Vineyards</h2>
 
 <h3 class="normal mt5 mb0">Alta Tierra Vineyard</h3>
 <p class="lh-copy i measure mt0">Formerly the "Trailer Vineyard"</p>
@@ -26,23 +35,31 @@ title: "The Place"
 
 <h3 class="normal mt5">Lake Vineyard</h3>
 <p class="lh-copy measure">This vineyard is located directly adjacent to the winery and Randy and Lori’s home. Before this vineyard was planted, Randy grew hay for 20 years to feed the Dunn’s horses. These 8 acres are mostly cabernet sauvignon, except for a few rows of Syrah (for home consumption). There is also about 1 acre of Petite Sirah and Peloursin planted on the west boarder of the vineyard. Mike named this Los Abuelos and uses it for his Retro Cellars label. The Cabernet Sauvignon was planted in 3 blocks. Lake I was planted in 2000 using 101-14 rootstock. Lake II was planted in 2001 on 3309. The last block, Lake III, was planted also on 3309 in 2003. Each block contains a mix of 4 different clones; 337, 15, Dunn (grafting’s from our Trailer Vineyard) and Frank (grafting’s from the Harry Frank vineyard). This vineyard is the coolest of all, as it sits in a small valley, and requires overhead sprinklers for frost protection along with a wind machine.</p>
+</section>
 
+
+<%= image_tag 'place/winery.jpg', :class => 'w-100' %>
+
+<section class="mv5 mw8 center">
 <h2 class="normal mt5 mb0">The Winery</h2>
 <p class="lh-copy measure i">Dunn’s winery sits in a fir forest high above the valley floor, a slightly scruffy compound with a ramshackle barn surrounded by agricultural equipment, outdoor fermentation tanks, and a fenced pasture with horses. The office is a former Western Union stagecoach stop. &mdash; Jay McInerney</p>
+</section>
 
+
+
+<%= image_tag 'place/potato-hill-pano.jpg', :class => 'w-100' %>
+
+<section class="mv5 mw8 center">
 <h2 class="normal mt5 mb0">Open Space</h2>
 <p class="lh-copy measure i">Sixty three of these forested acres are entrusted to the Napa Valley Land Trust . This ensures that regardless of who owns this land in the future it will stay as it is now – as trees.</p>
 
 <p class="lh-copy measure">Randy and Lori’s first donation to the <%= link_to "Napa Land Trust", "https://www.napalandtrust.org/", target: :_blank  %>  was in 2004. The Sentinel Hill property consisted of 64-acre of completely forested land as you enter the town of Angwin on Howell Mountain. The second donation, the Dunn’s gift of $5 million, was the largest donation in the history of the Land Trust. This gift was to the Napa Valley Wild Campaign to preserve and protect the Wildlake and Duff Ranches, inspiring the community to jump start the raising of more than $25 million in order to preserve and protect the 4,000 acre that make up the two ranches. This forested land is abundant in native vegetation and wildlife, and will remain so.</p>
 
 <p class="lh-copy measure">In life we have to decide what will define us and what we will leave behind for the next generation.</p>
+</section>
 
-<hr class="mt6">
-
-<div class="bg-washed-yellow pa4 f5">
-  <h3>Notes & Questions</h3>
-  <p class="lh-copy measure"><b>Illustration or map</b> Similar to what they did with Hudson?</p>
-</div>
-
+<%= image_tag 'place/drone.jpg', :class => 'w-100' %>
+<!--
 <%= image_tag 'randy.jpg', :class => 'w6' %>
 <%= image_tag 'rainbow.jpg', :class => 'w6' %>
+-->
