updates to place page

--- a/source/vineyards.html.erb
+++ b/source/vineyards.html.erb
@@ -11,13 +11,14 @@ title: "The Place"
 </blockquote>
 </section>
 
+<%= image_tag 'place/tractor.jpg', :class => 'w-100' %>
 
 <section class="mv5 mw8 center">
 <h2 class="normal mt5 mb0">The Mountain</h2>
 <p class="lh-copy measure">Something about how Randy was instrumental is helping create the first sub AVA in Napa and using his plane to survey the area.</p>
 </section>
 
-<%= image_tag 'place/coyote.jpg', :class => 'w-100' %>
+<%= image_tag 'place/side-hill.jpg', :class => 'w-100' %>
 
 <section class="mv5 mw8 center">
   
