--- a/source/wines.html.erb
+++ b/source/wines.html.erb
@@ -2,7 +2,7 @@
 title: "The Wine" 
 ---
 
-	<img src="http://www.dunnvineyards.com/wp-content/uploads/2014/06/wines-slider.jpg" class="w-100">
+<img src="/images/wine/wines-slider.jpg" class="w-100">
   <section class="pv5">
 <blockquote class="mb5 measure center">
   <p class="lh-copy mb0"><i>Nothing is easygoing about Randy Dunn's Cabernets, whether it's the dense red wax atop the bottle you need to soften to access the cork, or the uncompromising style that has become his trademark. &hellip; The quietly fierce nature of Dunn's wines has never been for all comers. But Dunn has always prided himself on being different.</i></p>
@@ -27,35 +27,33 @@ title: "The Wine"
 <section class="center pv5 cf" style="max-width: 1180px;">
 	<div class="w-100 center cf">
 		<div class="fl w-100 w-50-l ph4 mb4-l">
-			<h2 class="normal mt4">Howell Mountain Cabernet</h2>
+			<h2 class="normal mt4 tc">Howell Mountain Cabernet</h2>
       <!--  <p class="i mt0">Napa Valley: Howell Mountain AVA</p> -->
       <p class="lh-copy measure" >The Howell Mountain wines consist of one hundred percent Howell Mountain fruit farmed by us. One of the signatures of the Howell Mountain wine is that it is hand dipped in red wax.</p>
-			<p><%= link_to  'Tasting notes &raquo;', 'tasting-notes.html', :class => 'dark-blue link underline-hover' %></p>
-			<p><%= link_to  'How to remove the red wax &raquo;', 'how-to-remove-red-wax.html', :class => 'dark-blue link underline-hover' %></p>
+			<p class="tc"><%= link_to  'Tasting notes', 'tasting-notes.html', :class => 'dark-blue link underline-hover' %></p>
+			<p class="tc"><%= link_to  'How to remove the red wax', 'how-to-remove-red-wax.html', :class => 'dark-blue link underline-hover' %></p>
 		</div>
 
 		<div class="fl w-100 w-50-l ph4">
-			<h2 class="normal mt4">Napa Valley Cabernet</h2>
+			<h2 class="normal mt4 tc">Napa Valley Cabernet</h2>
 			<p class="lh-copy measure">The Napa Valley wines are a blend of our Howell Mountain fruit and a small quantity of fruit that we purchase from two growers in Coombsville. This valley floor fruit contributes to the wine’s earlier approachability and softer tannic structure.</p>
-			<p><%= link_to  'Tasting notes &raquo;', 'tasting-notes.html', :class => 'dark-blue link underline-hover' %></p>
+			<p class="tc"><%= link_to  'Tasting notes', 'tasting-notes.html', :class => 'dark-blue link underline-hover' %></p>
 		</div>
     </div>
       <p class="lh-copy measure center tc">Both of our wines are 100% Cabernet Sauvignon aged 32 months in 100% new French oak.</p>
 </section>
 
-	<img src="http://www.dunnvineyards.com/wp-content/uploads/2014/06/89-Dunn-Howell-Cab.jpg" class="w-100">
+   <img src="/images/wine/89-howell.jpg" class="w-100">
 
 <section class="mv5">
 	<div class="w-100 center cf">
 		<div class="fl w-100 w-50-l ph4">
 			<h2 class="normal mt4">Availability</h2>
-			<p class="lh-copy measure">The wines are offered to our mailing list every fall. Please click <%= mail_to 'erin@dunnvineyards.com', "here" %> for any mailing list inquiries. (hyperlink to Erin@dunnvineyards.com). The wines also are available in select retail and restaurant locations across the country.</p>
-
+      <p class="lh-copy measure">The wines are offered to our mailing list every fall. Please contact <%= mail_to 'erin@dunnvineyards.com', "Erin", :class => 'dark-blue link underline-hover' %> for any mailing list inquiries. The wines also are available in select retail and restaurant locations across the country.</p>
 		</div>
 		<div class="fl w-100 w-50-l ph4">
 			<h2 class="normal mt4">Library Wines</h2>
 			<p class="lh-copy measure">We are committed to maintaining a library of all the vintages we have produced. While these wines are not available, we do release older vintages of wine to our mailing list on a regular basis.</p>
-
 		</div>
 	</div>
 </section>
